# JojiKingdomEngine

./: .gitignore  CMakeLists.txt  README.md  SETTINGS.md
cmake/: CompilerFlags.cmake
include/jke/: SimulationEngine.hpp
include/jke/ai/: AIDecision.hpp  AIStrategy.hpp
include/jke/ai/personalities/: AggressiveAI.hpp  DefensiveAI.hpp  DiplomaticAI.hpp  EconomicAI.hpp  (+2 more)
include/jke/army/: Army.hpp  Unit.hpp
include/jke/battle/: BattleContext.hpp  BattleResult.hpp
include/jke/city/: City.hpp
include/jke/core/: Constants.hpp  EventBus.hpp  Random.hpp  Types.hpp
include/jke/diplomacy/: DiplomaticRelation.hpp
include/jke/economy/: ResourceLedger.hpp
include/jke/engines/: BattleEngine.hpp  DiplomacyEngine.hpp  EconomyEngine.hpp  HistoryEngine.hpp  MilitaryEngine.hpp  RebellionEngine.hpp  TechnologyEngine.hpp
include/jke/generators/: ArmyGenerator.hpp  CityGenerator.hpp  NationGenerator.hpp  TerrainGenerator.hpp  WorldGenerator.hpp
include/jke/history/: HistoryEvent.hpp  Timeline.hpp
include/jke/nation/: Kingdom.hpp  Ruler.hpp
include/jke/navy/: Fleet.hpp
include/jke/rebellion/: Rebellion.hpp
include/jke/technology/: TechTree.hpp  Technology.hpp
include/jke/terrain/: TerrainType.hpp
include/jke/world/: BanditGroup.hpp  NomadHorde.hpp  Season.hpp  Tile.hpp  WorldMap.hpp
src/: SimulationEngine.cpp
src/ai/: AIStrategy.cpp
src/ai/personalities/: AggressiveAI.cpp  DefensiveAI.cpp  DiplomaticAI.cpp  EconomicAI.cpp  ExpansionistAI.cpp  OpportunisticAI.cpp
src/city/: City.cpp
src/engines/: AIPhaseEngine.cpp  BattleEngine.cpp  CityBuildingEngine.cpp  CultureEngine.cpp  DiplomacyEngine.cpp  EconomyEngine.cpp  EventEngine.cpp  HistoryEngine.cpp  MilitaryEngine.cpp  RebellionEngine.cpp  StrategyEngine.cpp  TechnologyEngine.cpp
src/generators/: ArmyGenerator.cpp  CityGenerator.cpp  NationGenerator.cpp  TerrainGenerator.cpp  WorldGenerator.cpp
src/history/: Timeline.cpp
src/technology/: TechTree.cpp
src/world/: WorldMap.cpp
tests/: CMakeLists.txt  test_battle.cpp  test_economy.cpp  test_terrain.cpp
tools/: balance_runner.cpp  run_simulation.cpp
viewer/: main.cpp
